Prune config file

--- a/bin/config.cfg
+++ b/bin/config.cfg
@@ -1,62 +1,11 @@
 #
-# Server Density Agent Config
-# Docs: http://support.serverdensity.com/knowledgebase/articles/69360-agent-config-variables-linux-mac-freebsd
+# PagerDuty Agent Config
+# Docs: FIXME
 #
 
 [Main]
 sd_url: https://example.serverdensity.com
 agent_key: 
-
-#
-# Plugins
-#
-# Leave blank to ignore. See http://support.serverdensity.com/knowledgebase/articles/76018-writing-a-plugin-linux-mac-and-freebsd
-#
-
-plugin_directory:
-
-#
-# Optional status monitoring
-#
-# See http://support.serverdensity.com/knowledgebase/topics/10921-configuration
-# Ignore these if you do not wish to monitor them
-#
-
-# Apache
-# See http://support.serverdensity.com/knowledgebase/articles/71145-apache-monitoring-linux-mac-and-freebsd
-
-apache_status_url: http://www.example.com/server-status/?auto
-apache_status_user:
-apache_status_pass:
-
-# MongoDB
-# See http://support.serverdensity.com/knowledgebase/articles/71151-mongodb-monitoring-linux-mac-and-freebsd
-
-mongodb_server: 
-mongodb_dbstats: no
-mongodb_replset: no
-
-# MySQL
-# See http://support.serverdensity.com/knowledgebase/articles/71166-mysql-monitoring-linux-mac-and-freebsd
-
-mysql_server:
-mysql_user:
-mysql_pass:
-
-# nginx
-# See http://support.serverdensity.com/knowledgebase/articles/75885-nginx-monitoring-linux-mac-and-freebsd
-
-nginx_status_url: http://www.example.com/nginx_status
-
-# RabbitMQ
-# See http://support.serverdensity.com/knowledgebase/articles/75888-rabbitmq-monitoring-linux-mac-and-freebsd
-
-# for rabbit > 2.x use this url:
-# rabbitmq_status_url: http://www.example.com:55672/api/overview
-# for earlier, use this:
-rabbitmq_status_url: http://www.example.com:55672/json
-rabbitmq_user: guest
-rabbitmq_pass: guest
 
 # Temporary file location
 # See http://support.serverdensity.com/knowledgebase/articles/69360-agent-config-variables-linux-mac-freebsd
