Set agent_key to keyHere to trigger config check

--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -5,7 +5,7 @@
 
 [Main]
 sd_url: https://example.serverdensity.com
-agent_key: 
+agent_key: keyHere
 
 # Temporary file location
 #tmp_directory: /var/log/custom_location
