Change sd_url to pd_url

--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -4,7 +4,7 @@
 #
 
 [Main]
-sd_url: https://example.serverdensity.com
+pd_url: https://example.pagerduty.com
 agent_key: keyHere
 
 # Temporary file location
