Agent config for production - work in progress

--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -1,18 +1,12 @@
 #
 # PagerDuty Agent Config
-# Docs: FIXME
 #
 
 [Main]
-pd_url: https://example.pagerduty.com
-agent_key: keyHere
 
-# Temporary file location
-#tmp_directory: /var/log/custom_location
+# URL of the PagerDuty event integration API
+event_api_url = https://example.pagerduty.com
 
-# Pid file location
-#pidfile_directory: /var/custom_location
-
-# Set log level
-#logging_level: debug
+# Log level
+#log_level = debug
 
