Add check_freq config setting

--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -7,6 +7,9 @@
 # URL of the PagerDuty event integration API
 event_api_url = https://example.pagerduty.com
 
+# How often queue is checked
+#check_freq = 60
+
 # Log level
 #log_level = debug
 
