Fix names to camelcase

--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -8,7 +8,7 @@
 event_api_url = https://example.pagerduty.com
 
 # How often queue is checked
-#checkFreqSec = 60
+#check_freq_sec = 60
 
 # Log level
 #log_level = debug
