Dummy agent config keys pd_url and agent_key

--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -3,6 +3,8 @@
 #
 
 [Main]
+pd_url: https://example.pagerduty.com
+agent_key: keyHere
 
 # URL of the PagerDuty event integration API
 event_api_url = https://example.pagerduty.com
