Removing quotes from config value.

--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -16,4 +16,4 @@ event_api_url = https://example.pagerduty.com
 # how many seconds to back off events in a service key every time a
 # backoff-eligible error occurs.
 # (total max-retry time = more than 1hr)
-backoff_secs = "180,270,410,610,910,1370"
+backoff_secs = 180,270,410,610,910,1370
