--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -3,8 +3,9 @@
 #
 
 [Main]
-# How often queue is checked
-#check_freq_sec = 60
+
+# How often the outbound event queue is checked and processed
+#queue_poll_interval_secs = 60
 
 # Log level
 #log_level = debug
