--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -4,8 +4,8 @@
 
 [Main]
 
-# How often the outbound event queue is checked and processed
-#queue_poll_interval_secs = 60
+# How often the send queue is checked and events sent to PagerDuty
+#send_interval_secs = 60
 
 # Log level
 #log_level = debug
