--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -7,6 +7,9 @@
 # How often the send queue is checked and events sent to PagerDuty
 #send_interval_secs = 60
 
+# How often the cleanup is run on the send queue
+#cleanup_interval_secs = 10800
+
 # Log level
 #log_level = debug
 
