--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -10,6 +10,9 @@
 # How often the cleanup is run on the send queue
 #cleanup_interval_secs = 10800
 
+# How old events must be before they are cleaned up
+#cleanup_threshold_secs = 604800
+
 # Log level
 #log_level = debug
 
