--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -16,7 +16,13 @@
 # Log level
 #log_level = debug
 
-# how many seconds to back off events in a service key every time a
+# How many seconds to back off events in a service key every time a
 # backoff-eligible error occurs.
+# The value is a comma-separated list of backoff interval times in seconds.
+# The most common backoff error should be that the service is being temporarily
+# throttled by the PagerDuty Integrations API.  The first backoff of a service
+# key will use the first value, a consecutive backoff error will use the second
+# value and so on. If there are not enough values, the last value is reused.
 # (total max-retry time = more than 1hr)
-backoff_secs = 180,270,410,610,910,1370
+backoff_intervals = 180,270,410,610,910,1370
+
