--- a/conf/config.cfg
+++ b/conf/config.cfg
@@ -8,9 +8,11 @@
 #send_interval_secs = 60
 
 # How often the cleanup is run on the send queue
+# The default is 3 hours (= 10800 seconds)
 #cleanup_interval_secs = 10800
 
 # How old events must be before they are cleaned up
+# The default is 1 week (= 604800 seconds)
 #cleanup_threshold_secs = 604800
 
 # Log level
@@ -23,6 +25,6 @@
 # throttled by the PagerDuty Integrations API.  The first backoff of a service
 # key will use the first value, a consecutive backoff error will use the second
 # value and so on. If there are not enough values, the last value is reused.
-# (total max-retry time = more than 1hr)
+# The default is 180,270,410,610,910,1370 (total time of more than 1hr)
 backoff_intervals = 180,270,410,610,910,1370
 
