Rename maximum_error_back_count -> retry_limit_for_possible_errors

--- a/conf/pdagent.conf
+++ b/conf/pdagent.conf
@@ -23,7 +23,8 @@
 # sending out events of service key.)
 backoff_interval_secs = 60
 
-# Maximum number of times to back off events in a service key when
-# backoff-eligible errors occur, before any potential stringent action,
-# like marking an event as bad, can occur.
-maximum_error_backoff_count = 60
+# Maximum number of times to retry an event in a service key when errors occur,
+# before any potential stringent action, like marking an event as bad, happens.
+# (Note: only applicable to errors, not when service keys are throttled by
+# PagerDuty.)
+retry_limit_for_possible_errors = 60
