Remove config defaults from code; set them in config file instead.

--- a/conf/pdagent.conf
+++ b/conf/pdagent.conf
@@ -5,18 +5,18 @@
 [Main]
 
 # How often the send queue is checked and events sent to PagerDuty
-#send_interval_secs = 10
+send_interval_secs = 10
 
 # How often the cleanup is run on the send queue
 # The default is 3 hours (= 10800 seconds)
-#cleanup_interval_secs = 10800
+cleanup_interval_secs = 10800
 
 # How old events must be before they are cleaned up
 # The default is 1 week (= 604800 seconds)
-#cleanup_threshold_secs = 604800
+cleanup_threshold_secs = 604800
 
 # Log level
-#log_level = debug
+log_level = info
 
 # How many seconds to back off events in a service key every time a
 # backoff-eligible situation occurs (e.g. throttling of service key, errors in
