--- a/conf/pdagent.conf
+++ b/conf/pdagent.conf
@@ -25,3 +25,7 @@ backoff_interval_secs = 60
 # (Note: only applicable to errors, not when service keys are throttled by
 # PagerDuty.)
 retry_limit_for_possible_errors = 60
+
+# Source address used when connecting to PagerDuty. Use 0.0.0.0 if you want to
+# let your OS choosing the source address automaticaly.
+source_address = 0.0.0.0
