check for python minor ver > 6 for source_address arg

--- a/conf/pdagent.conf
+++ b/conf/pdagent.conf
@@ -28,4 +28,5 @@ retry_limit_for_possible_errors = 60
 
 # Source address used when connecting to PagerDuty. Use 0.0.0.0 if you want to
 # let your OS choosing the source address automaticaly.
+# NOTE - ignored on python2.6 envs
 source_address = 0.0.0.0
