--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -19,6 +19,10 @@ RUN apt-get install -y -q ruby2.3
 RUN apt-get install -y -q ruby2.3-dev
 RUN apt-get install -y -q software-properties-common
 RUN apt-get install -y -q sudo
+RUN apt-get install -y -q systemd
+RUN apt-get clean
+RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
 RUN update-ca-certificates
 
 RUN gem install -q --no-ri --no-rdoc -v ${FPM_VERSION} fpm
@@ -31,11 +35,6 @@ RUN useradd --create-home --shell /bin/bash pdagent \
   && chown -R pdagent /usr/share/pdagent \
   # Primarily for handling sudo use during build and testing.
   && echo "pdagent ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
-
-RUN apt-get update \
-    && apt-get install -y systemd \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN cd /lib/systemd/system/sysinit.target.wants/ \
     && ls | grep -v systemd-tmpfiles-setup | xargs rm -f $1
