--- a/Dockerfile-centos-7
+++ b/Dockerfile-centos-7
@@ -19,6 +19,7 @@ RUN yum install -y -q rpm-sign
 RUN yum install -y -q rh-ruby23
 RUN yum install -y -q rh-ruby23-ruby-devel
 RUN yum install -y -q sudo
+RUN yum install -y -q which
 
 RUN source /opt/rh/rh-ruby23/enable && \
   /opt/rh/rh-ruby23/root/usr/bin/gem install -q --no-ri --no-rdoc -v $FPM_VERSION fpm
@@ -30,6 +31,7 @@ RUN  mkdir -p /pd-agent-install/build-linux/release
 RUN  cd /pd-agent-install/build-linux && ./make_rpm.sh /pd-agent-install/build-linux/gnupg /pd-agent-install/build-linux/release
 RUN  echo "Installing rpm package"
 
-RUN dpkg -i /pd-agent-install/build-linux/release/deb/pdagent_1.6_all.rpm
+RUN rpm --import /pd-agent-install/target/tmp/GPG-KEY-pagerduty
+RUN yum install -y /pd-agent-install/build-linux/release/rpm/pdagent-1.6-1.noarch.rpm
 
 CMD ["/usr/sbin/init"]
