--- a/Dockerfile-centos-7
+++ b/Dockerfile-centos-7
@@ -4,8 +4,8 @@ ARG FPM_VERSION=1.11.0
 ARG PYTHON_VERSION=3
 ENV PYTHON_VERSION ${PYTHON_VERSION}
 
-RUN mkdir -p /usr/share/pdagent
-WORKDIR /usr/share/pdagent
+ENV container docker
+ENV DOCKER_DEV_ENV true
 
 RUN yum install -y -q centos-release-scl
 RUN yum install -y -q createrepo
@@ -20,19 +20,19 @@ RUN yum install -y -q rpm-sign
 RUN yum install -y -q rh-ruby23
 RUN yum install -y -q rh-ruby23-ruby-devel
 RUN yum install -y -q sudo
+RUN yum install -y -q which
 
 RUN source /opt/rh/rh-ruby23/enable && \
   /opt/rh/rh-ruby23/root/usr/bin/gem install -q --no-ri --no-rdoc -v $FPM_VERSION fpm
 RUN yum install -y python${PYTHON_VERSION}
 
-COPY . /usr/share/pdagent
-RUN cp /usr/share/pdagent/build-linux/pdagent.service /lib/systemd/system
+WORKDIR /pd-agent-install
+COPY . /pd-agent-install
+RUN  mkdir -p /pd-agent-install/build-linux/release
+RUN  cd /pd-agent-install/build-linux && ./make_rpm.sh /pd-agent-install/build-linux/gnupg /pd-agent-install/build-linux/release
+RUN  echo "Installing rpm package"
 
-RUN useradd --create-home --shell /bin/bash pdagent \
-  && chown -R pdagent /usr/share/pdagent \
-  # Primarily for handling sudo use during build and testing.
-  && echo "pdagent ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
-
-RUN systemctl enable pdagent
+RUN rpm --import /pd-agent-install/target/tmp/GPG-KEY-pagerduty
+RUN yum install -y /pd-agent-install/build-linux/release/rpm/pdagent-1.6-1.noarch.rpm
 
 CMD ["/usr/sbin/init"]
