--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run: make test
   test-integration-centos:
     docker:
-      - image: docker
+      - image: circleci/python:3.7.6
     steps:
       - checkout
       - run: make centos
