--- a/Dockerfile-centos-7
+++ b/Dockerfile-centos-7
@@ -3,9 +3,8 @@ FROM centos/systemd
 ARG FPM_VERSION=1.11.0
 ARG PYTHON_VERSION=3
 ENV PYTHON_VERSION ${PYTHON_VERSION}
-
 ENV container docker
-ENV DOCKER_DEV_ENV true
+ENV DOCKER_WORKDIR /usr/share/pdagent
 
 RUN yum install -y -q centos-release-scl
 RUN yum install -y -q createrepo
@@ -26,12 +25,7 @@ RUN source /opt/rh/rh-ruby23/enable && \
   /opt/rh/rh-ruby23/root/usr/bin/gem install -q --no-ri --no-rdoc -v $FPM_VERSION fpm
 RUN yum install -y python${PYTHON_VERSION}
 
-WORKDIR /pd-agent-install
-COPY . /pd-agent-install
-RUN  mkdir -p /pd-agent-install/build-linux/release
-RUN  cd /pd-agent-install/build-linux && ./make_rpm.sh /pd-agent-install/build-linux/gnupg /pd-agent-install/build-linux/release
-RUN  echo "Installing rpm package"
-
-RUN ./scripts/build.sh centos
+COPY . $DOCKER_WORKDIR
+WORKDIR $DOCKER_WORKDIR
 
 CMD ["/usr/sbin/init"]
