--- a/Dockerfile-centos-7
+++ b/Dockerfile-centos-7
@@ -2,9 +2,10 @@ FROM centos/systemd
 
 ARG FPM_VERSION=1.11.0
 ARG PYTHON_VERSION=3
+ARG DOCKER_WORKDIR /usr/share/pdagent
 ENV PYTHON_VERSION ${PYTHON_VERSION}
 ENV container docker
-ENV DOCKER_WORKDIR /usr/share/pdagent
+ENV DOCKER_WORKDIR ${DOCKER_WORKDIR}
 
 RUN yum install -y -q centos-release-scl
 RUN yum install -y -q createrepo
