Fixing Dockerfiles, removing redundant gitignores.

--- a/Dockerfile-centos-7
+++ b/Dockerfile-centos-7
@@ -2,7 +2,7 @@ FROM centos/systemd
 
 ARG FPM_VERSION=1.11.0
 ARG PYTHON_VERSION=3
-ARG DOCKER_WORKDIR /usr/share/pdagent
+ARG DOCKER_WORKDIR=/usr/share/pdagent
 ENV PYTHON_VERSION ${PYTHON_VERSION}
 ENV container docker
 ENV DOCKER_WORKDIR ${DOCKER_WORKDIR}
