--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -3,7 +3,7 @@ FROM ubuntu:${UBUNTU_VERSION}
 
 ARG FPM_VERSION=1.11.0
 ARG PYTHON_VERSION=3
-ARG DOCKER_WORKDIR /usr/share/pdagent
+ARG DOCKER_WORKDIR=/usr/share/pdagent
 ENV PYTHON_VERSION ${PYTHON_VERSION}
 ENV container docker
 ENV DEBIAN_FRONTEND noninteractive
