--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,22 @@ jobs:
     steps:
       - checkout
       - run: make test
+  test-install-ubuntu-py3:
+    steps:
+      - checkout
+      - run: make build-ubuntu && make install-ubuntu-test
+  test-install-ubuntu-py2:
+    steps:
+      - checkout
+      - run:
+        environment:
+          PYTHON_VERSION: ''
+        command: make build-ubuntu && make install-ubuntu-test
 workflows:
   version: 2
-  build_and_test:
+  test:
     jobs:
       - test-py2
       - test-py3
+      - test-install-ubuntu-py3
+      - test-install-ubuntu-py2
