--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,21 +17,11 @@ jobs:
       - image: ubuntu-1604:202010-01
     steps:
       - checkout
-      - run: "./scripts/install-ubuntu-test.sh"
-  # test-install-ubuntu-py2:
-  #   machine:
-  #     - image: ubuntu-1604:202010-01
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         environment:
-  #           PYTHON_VERSION: ''
-  #         command: make test-install-ubuntu
+      - run: ./scripts/install-ubuntu-test.sh
 workflows:
   version: 2
   test:
     jobs:
       - test-py2
       - test-py3
-#      - test-install-ubuntu-py2
       - test-install-ubuntu-py3
