--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -9,6 +9,9 @@ ENV container docker
 ENV DEBIAN_FRONTEND noninteractive
 ENV DOCKER_WORKDIR ${DOCKER_WORKDIR}
 
+# There is known issues with Docker + systemd
+ENV PDAGENT_IGNORE_SYSTEMD "foo"
+
 RUN apt-get update -y -qq
 RUN apt-get install -y -q apt-utils
 RUN apt-get install -y -q build-essential
